--- a/static/test.html
+++ b/static/test.html
@@ -14,7 +14,6 @@
             padding: 0;
         }
 
-        /* Main Search Bar Styling */
         #search-container {
             margin-top: 50px;
             text-align: center;
@@ -38,17 +37,15 @@
             background-color: rgba(0, 0, 0, 0.1);
         }
 
-        /* Shortcut Grid Container */
         .shortcut-container {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+            grid-template-columns: repeat(4, 1fr);
             gap: 20px;
             padding: 20px;
             justify-items: center;
             margin-top: 30px;
         }
 
-        /* Individual Shortcut Style */
         .shortcut {
             width: 120px;
             height: 120px;
@@ -80,7 +77,6 @@
             font-size: 14px;
         }
 
-        /* Fullscreen Embed iframe */
         .fullpage-iframe {
             width: 100%;
             height: 100vh;
@@ -102,7 +98,6 @@
 <h1>Proxy</h1>
 <p id="dynamicParagraph">(TEXT)</p>
 
-<!-- Search Bar Form -->
 <div id="search-container">
     <form id="uv-form" onsubmit="submitSearch(event)">
         <input id="uv-search-engine" value="https://duckduckgo.com/?q=%s" type="hidden"/>
@@ -111,92 +106,71 @@
     </form>
 </div>
 
-<!-- Shortcut Grid -->
-<div class="shortcut-container">
-    <!-- Example Shortcuts with Dynamic Favicons -->
-    <div class="shortcut" onclick="openEmbedPage('https://www.nvidia.com/en-us/geforce/')">
-        <img class="favicon" src="" alt="GeForce">
-        <div class="shortcut-text">GeForce</div>
-    </div>
-
-    <div class="shortcut" onclick="openEmbedPage('https://www.roblox.com/')">
-        <img class="favicon" src="" alt="Roblox">
-        <div class="shortcut-text">Roblox</div>
-    </div>
-
-    <div class="shortcut" onclick="openEmbedPage('https://www.instagram.com/')">
-        <img class="favicon" src="" alt="Instagram">
-        <div class="shortcut-text">Instagram</div>
-    </div>
-
-    <div class="shortcut" onclick="openEmbedPage('https://www.twitch.tv/')">
-        <img class="favicon" src="" alt="Twitch">
-        <div class="shortcut-text">Twitch</div>
-    </div>
-
-    <div class="shortcut" onclick="openEmbedPage('https://www.youtube.com/')">
-        <img class="favicon" src="" alt="YouTube">
-        <div class="shortcut-text">YouTube</div>
-    </div>
-
-    <div class="shortcut" onclick="openEmbedPage('https://now.gg/')">
-        <img class="favicon" src="" alt="Now.gg">
-        <div class="shortcut-text">Now.gg</div>
-    </div>
-
-    <div class="shortcut" onclick="openEmbedPage('https://www.netflix.com/')">
-        <img class="favicon" src="" alt="Netflix">
-        <div class="shortcut-text">Netflix</div>
-    </div>
-
-    <div class="shortcut" onclick="openEmbedPage('https://www.spotify.com/')">
-        <img class="favicon" src="" alt="Spotify">
-        <div class="shortcut-text">Spotify</div>
-    </div>
+<div class="shortcut-container" id="shortcut-container">
+    <!-- Shortcuts will be injected dynamically by JavaScript -->
 </div>
 
-<!-- Fullscreen Embed -->
 <iframe class="fullpage-iframe" id="embed-frame" src=""></iframe>
 
 <script>
-    // Function to dynamically set favicon for each app
-    function setFavicon(domain, element) {
-        const faviconUrl = `${domain}/favicon.ico`;
-        fetch(faviconUrl, {
-            method: 'HEAD',
-            mode: 'no-cors'
-        }).then(response => {
-            if (response.ok) {
-                element.src = faviconUrl; // If favicon exists, set the image source
-            } else {
-                element.src = "https://www.example.com/default-favicon.ico"; // Default favicon if not found
+    const shortcuts = [
+        { name: "GeForce", url: "https://www.nvidia.com/en-us/geforce/" },
+        { name: "Roblox", url: "https://www.roblox.com/" },
+        { name: "Instagram", url: "https://www.instagram.com/" },
+        { name: "Twitch", url: "https://www.twitch.tv/" },
+        { name: "YouTube", url: "https://www.youtube.com/" },
+        { name: "Now.gg", url: "https://now.gg/" },
+        { name: "Netflix", url: "https://www.netflix.com/" },
+        { name: "Spotify", url: "https://www.spotify.com/" }
+    ];
+
+    // Function to fetch the favicon of a domain dynamically
+    async function fetchFavicon(domainUrl) {
+        try {
+            // Fetch the HTML content of the page
+            const response = await fetch(domainUrl, { method: 'GET', mode: 'no-cors' });
+            const text = await response.text();
+            const parser = new DOMParser();
+            const doc = parser.parseFromString(text, "text/html");
+            const faviconLink = doc.querySelector("link[rel='icon'], link[rel='shortcut icon']");
+
+            // If a favicon exists, return its href
+            if (faviconLink) {
+                return faviconLink.href;
             }
-        }).catch(() => {
-            element.src = "https://www.example.com/default-favicon.ico"; // Default favicon if error occurs
-        });
+
+            // Fallback: if no favicon link is found, return the default favicon path
+            return `${new URL(domainUrl).origin}/favicon.ico`;
+        } catch (error) {
+            console.error("Error fetching favicon:", error);
+            return `${new URL(domainUrl).origin}/favicon.ico`; // Return a fallback favicon if the fetch fails
+        }
     }
 
-    // Set the favicon for each app (you can add more apps here)
-    window.onload = function() {
-        const shortcuts = [
-            { domain: 'https://www.nvidia.com', id: 'geforce-favicon' },
-            { domain: 'https://www.roblox.com', id: 'roblox-favicon' },
-            { domain: 'https://www.instagram.com', id: 'instagram-favicon' },
-            { domain: 'https://www.twitch.tv', id: 'twitch-favicon' },
-            { domain: 'https://www.youtube.com', id: 'youtube-favicon' },
-            { domain: 'https://now.gg', id: 'nowgg-favicon' },
-            { domain: 'https://www.netflix.com', id: 'netflix-favicon' },
-            { domain: 'https://www.spotify.com', id: 'spotify-favicon' }
-        ];
+    // Function to render shortcuts with dynamic favicons
+    async function renderShortcuts() {
+        const container = document.getElementById("shortcut-container");
+        for (const shortcut of shortcuts) {
+            const faviconUrl = await fetchFavicon(shortcut.url);
 
-        // Loop through each shortcut to set its favicon dynamically
-        const shortcutElements = document.querySelectorAll('.shortcut');
-        shortcutElements.forEach((shortcut, index) => {
-            const imgElement = shortcut.querySelector('img');
-            const { domain } = shortcuts[index];
-            setFavicon(domain, imgElement);
-        });
-    };
+            const shortcutElement = document.createElement("div");
+            shortcutElement.classList.add("shortcut");
+            shortcutElement.onclick = () => openEmbedPage(shortcut.url);
+
+            const img = document.createElement("img");
+            img.classList.add("favicon");
+            img.src = faviconUrl; // Use the fetched favicon URL
+            img.alt = `${shortcut.name} Logo`;
+
+            const text = document.createElement("div");
+            text.classList.add("shortcut-text");
+            text.textContent = shortcut.name;
+
+            shortcutElement.appendChild(img);
+            shortcutElement.appendChild(text);
+            container.appendChild(shortcutElement);
+        }
+    }
 
     // Function to handle opening the URLs in the embed iframe
     function openEmbedPage(url) {
@@ -212,6 +186,9 @@
             openEmbedPage(url);
         }
     }
+
+    // Call renderShortcuts when the page loads
+    window.onload = renderShortcuts;
 </script>
 
 </body>
