--- a/static/index.html
+++ b/static/index.html
@@ -281,7 +281,7 @@
         document.querySelector('#search-container').style.display = 'none';
         document.querySelector('#shortcut-container').style.display = 'none';
         document.querySelector('#embed-frame').style.display = 'block';
-        document.querySelector('#embed-frame').src = `https://static/embed#${url}`;
+        document.querySelector('#embed-frame').src = `/static/embed#${url}`;
     }
 
     function submitSearch(event) {
