--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,7 @@
             text-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
         }
 
-        /* Search Container */
+        /* Modern Search Bar */
         #search-container {
             width: 100%;
             text-align: center;
@@ -36,35 +36,34 @@
         }
 
         .search-bar-home {
-            padding: 15px;
             width: 50%;
+            padding: 12px 20px;
             font-size: 18px;
-            border-radius: 5px;
+            border-radius: 50px;
             border: 2px solid rgba(255, 255, 255, 0.3);
             background-color: rgba(0, 0, 0, 0.5);
             color: #fff;
-            transition: border-color 0.3s ease;
+            transition: all 0.3s ease;
+            padding-left: 40px;
+            position: relative;
         }
 
         .search-bar-home:focus {
             border-color: #66f;
             outline: none;
+            box-shadow: 0 0 8px 2px rgba(255, 255, 255, 0.6), 0 0 12px 4px rgba(102, 102, 255, 0.8);
         }
 
-        .search-button {
-            padding: 12px 25px;
-            font-size: 16px;
-            border: none;
-            background-color: #66f;
-            color: white;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            margin-top: 15px;
+        .search-bar-home::placeholder {
+            color: rgba(255, 255, 255, 0.6);
         }
 
-        .search-button:hover {
-            background-color: #5578d0;
+        .search-bar-home i {
+            position: absolute;
+            top: 50%;
+            left: 12px;
+            transform: translateY(-50%);
+            color: rgba(255, 255, 255, 0.6);
         }
 
         /* Shortcuts Container */
@@ -75,6 +74,7 @@
             gap: 20px;
             margin-top: 40px;
             margin-bottom: 30px;
+            width: 80%;
         }
 
         .shortcut {
@@ -110,7 +110,6 @@
             padding: 5px 0;
         }
 
-        /* Add Shortcut Button */
         .add-shortcut {
             width: 100px;
             height: 100px;
@@ -223,8 +222,10 @@
 <!-- Search Bar -->
 <div id="search-container">
     <form id="uv-form" onsubmit="submitSearch(event)">
-        <input id="uv-address" type="text" class="search-bar-home" placeholder="Search or enter a URL" />
-        <button type="submit" class="search-button">SEARCH <i class="fa-solid fa-magnifying-glass"></i></button>
+        <div style="position: relative;">
+            <input id="uv-address" type="text" class="search-bar-home" placeholder="Search or enter a URL" />
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
     </form>
 </div>
 
