--- a/static/test.html
+++ b/static/test.html
@@ -223,10 +223,9 @@
 </head>
 <body>
 
-<h1>Proxy</h1>
+<h1>NightWakeX</h1>
 
-<!-- Dynamic Paragraph Text -->
-<p id="dynamicParagraph">(TEXT)</p>
+
 
 <!-- Search Bar -->
 <div id="search-container">
