--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,102 @@
     <title>New Tab</title>
     <link rel="stylesheet" href="../storage/css/evenmorestyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../storage/css/static.css">
 </head>
 <body>
+        <style>
+        /* Global Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Comfortaa', sans-serif;
+            font-weight: bold;
+        }
+
+        /* Body */
+        body {
+            background-color: #111;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        /* Search Container */
+        #search-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+        }
+
+        /* Search Bar */
+        #uv-address {
+            padding: 15px 20px;
+            border-radius: 30px;
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            background-color: rgba(0, 0, 0, 0.4);
+            color: white;
+            font-size: 18px;
+            width: 300px;
+            transition: all 0.3s ease;
+            outline: none;
+            box-shadow: 0 0 15px rgba(0, 0, 255, 0.2); /* Blue Glow */
+        }
+
+        /* Search Bar Focused */
+        #uv-address:focus {
+            border-color: rgba(255, 255, 255, 0.5);
+            background-color: rgba(0, 0, 0, 0.6);
+            box-shadow: 0 0 25px rgba(213, 0, 249, 0.8); /* Purple Glow */
+        }
+
+        /* Placeholder Styling */
+        #uv-address::placeholder {
+            color: rgba(255, 255, 255, 0.6);
+        }
+
+        /* Search Icon Inside the Input */
+        #uv-address::before {
+            content: '\f002'; /* FontAwesome search icon */
+            font-family: 'Font Awesome 5 Free';
+            font-weight: 900;
+            position: absolute;
+            top: 50%;
+            left: 15px;
+            transform: translateY(-50%);
+            color: rgba(255, 255, 255, 0.6);
+            transition: color 0.3s ease;
+        }
+
+        #uv-address:focus::before {
+            color: #D500F9; /* Purple Glow when focused */
+        }
+
+        /* Hover Effects */
+        #uv-address:hover {
+            border-color: rgba(255, 255, 255, 0.5);
+            background-color: rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 20px rgba(213, 0, 249, 0.7);
+        }
+
+        /* Submit Button (Removed) */
+        #search-button {
+            display: none;
+        }
+
+        /* Adding a Glowing Effect to the Container */
+        #search-container:hover #uv-address {
+            box-shadow: 0 0 20px rgba(213, 0, 249, 0.7); /* Glowing Effect */
+            border-color: rgba(255, 255, 255, 0.5);
+        }
+
+        /* Optional Styling: Adding Floating Effect on Hover */
+        #uv-address:hover {
+            transform: scale(1.05);
+        }
+    </style>
 
 <script src="/storage/js/particles.js"></script>
   <script src="/storage/js/app.js"></script>
