--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <button onclick="document.querySelector('.tab-iframe.active').contentWindow.location.reload()" class="nav-btn">
           <i class="fas fa-redo"></i>
         </button>
-        <div class="search-bar-container">
+        <center><div class="search-bar-container">
         <input type="text" id="search-input" class="search-bar" placeholder="Search or enter a URL">
-      </div>
+      </div></center>
         <button onclick="inspect()" class="nav-btn">
           <i class="fa fa-code"></i>
         </button>
