--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <i class="fas fa-redo"></i>
         </button>
         <center><div class="search-bar-container">
-        <input type="text" id="search-input" class="search-bar" placeholder="Search or enter a URL">
+        <center><input type="text" id="search-input" class="search-bar" placeholder="Search or enter a URL"></center>
       </div></center>
         <button onclick="inspect()" class="nav-btn">
           <i class="fa fa-code"></i>
